<resources>
    <string name="app_name">North-South</string>
    <string name="txt_enter">Enter</string>
    <string name="txt_login">Login</string>
    <string name="txt_password">Password</string>
    <string name="enter_btn">Send</string>
    <string name="txt_lk">lk</string>
    <string name="toast_error_message">Fill in the fields</string>
    <string name="login_errer_message">Enter the login</string>
    <string name="password_errer_message">Enter the password</string>
    <string name="conection_error_message">Error with connection</string>
    <string name="not_found_error_message">User not found</string>
    <string name="base_url" translatable="false">http://194.35.119.103/apishechka/m/</string>
    <string name="account">Account</string>
    <string name="qr_scanner">Scanner</string>
    <string name="roadmap">Path</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="patronymic">Patronymic</string>
    <string name="bus_code">The bus code</string>
    <string name="driver_status">Status (Active/Turned off)</string>
    <string name="save_account_change">Save</string>
    <string name="time_demo" translatable="false">00:00</string>
    <string name="server_error_message">Server-side error</string>
    <string name="request_error_message">Could not get the necessary data from the server</string>
    <string name="first_station">The name of the first station.</string>
    <string name="previous_segment">Previous Segment</string>
    <string name="next_segment">Next Segment</string>
    <string name="start_trip">Start Trip</string>
    <string name="end_trip">End Trip</string>
    <string name="txt_reload">Reload</string>
    <string name="txt_exit">Logout</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="txt_bus_flight_number">Departure number</string>
    <string name="txt_seat_number">Seat number</string>
    <string name="txt_ticket_code">Ticket Code</string>
    <string name="txt_chek_the_tiket">Check the ticket</string>
    <string name="ticket_error">Сannot confirm the authenticity of the ticket</string>
    <string name="ticket_success">The ticket has been successfully verified</string>
    <string name="check_ticket_button">Check the ticket manually</string>
    <string name="qr_param_1" translatable="false">flight_id</string>
    <string name="qr_param_2" translatable="false">place_id</string>
    <string name="qr_param_3" translatable="false">code</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="txt_tiket_id">Ticket number</string>
    <string name="save_success_message">The save was successful</string>
    <string name="ticket_error_message_1">Select a flight in the Route tab</string>
    <string name="ticket_error_message_2.1">"This is a ticket for another flight with the number "</string>
    <string name="ticket_error_message_2.2">" at"</string>
    <string name="ticket_error_message_2.3">" is currently selected flight with the number "</string>
    <string name="ticket_error_message_3">The ticket is not valid</string>
    <string name="flight_error">There is a hare on the flight</string>
    <string name="reload_toast">The data has been updated</string>
    <string name="ticket_already_used_error_message">The ticket has already been used.</string>
    <string name="send_confirmation_txt">Are you sure you want to send data about the completion of the trip? It will be impossible to return them, but you can start the trip again.</string>
    <string name="confirm">Confirm</string>
    <string name="exit_confirm_txt">Are you sure you want to log out of your account while you have an unfinished flight? All data about him will be deleted, without the possibility to restore them.</string>
    <string name="cancel_started_trip_error_message">Complete the trip</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>