<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AccountFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            style="@style/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field_background"
            android:fontFamily="@font/montserrat"
            android:text="@string/first_name" />

        <TextView
            android:id="@+id/textView2"
            style="@style/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/text_field_background"
            android:fontFamily="@font/montserrat"
            android:gravity="left|center_vertical"
            android:paddingStart="10dp"
            android:text="@string/last_name" />

        <TextView
            android:id="@+id/textView3"
            style="@style/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patronymic" />

        <TextView
            android:id="@+id/textView4"
            style="@style/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bus_code" />
    </LinearLayout>

</FrameLayout>