<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TicketFragment">

    <LinearLayout
        style="@style/popup_window"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_window"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/flightNumber"
            style="@style/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="20sp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txt_bus_flight_number"
            android:inputType="text" />

        <EditText
            android:id="@+id/placeNumber"
            style="@style/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="20sp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txt_seat_number"
            android:inputType="text" />

        <EditText
            android:id="@+id/codeNumber"
            style="@style/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20sp"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="20sp"
            android:ems="10"
            android:gravity="center"
            android:hint="@string/txt_ticket_code"
            android:inputType="text" />

        <Button
            android:id="@+id/checkButton"
            style="@style/text_view"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:layout_marginStart="20sp"
            android:layout_marginTop="15sp"
            android:layout_marginEnd="20sp"
            android:gravity="center"
            android:text="@string/txt_chek_the_tiket"
            android:textColor="@color/default_btn_color" />

    </LinearLayout>
</FrameLayout>