<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.TripFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="385dp"
            android:layout_height="189dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/login_enter"
            android:backgroundTint="@color/default_btn_color"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cancelButton">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.056"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_direction"
                app:tint="@color/default_btn_text_color" />

            <TextView
                android:id="@+id/time_start"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:shadowColor="@color/default_btn_text_color"
                android:text="@string/time_demo"
                android:textColor="@color/default_btn_text_color"
                android:textSize="24sp"
                app:drawableTint="@color/default_btn_text_color"
                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2" />

            <TextView
                android:id="@+id/station_start"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/first_station"
                android:textColor="@color/default_btn_text_color"
                android:textSize="20sp"
                app:drawableTint="@color/default_btn_text_color"
                app:layout_constraintBottom_toBottomOf="@+id/time_start"
                app:layout_constraintStart_toEndOf="@+id/time_start"
                app:layout_constraintTop_toTopOf="@+id/time_start"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/station_finish"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginStart="10dp"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:text="@string/first_station"
                android:textColor="@color/default_btn_text_color"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@+id/time_finish"
                app:layout_constraintStart_toEndOf="@+id/time_finish"
                app:layout_constraintTop_toTopOf="@+id/time_finish" />

            <TextView
                android:id="@+id/time_finish"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat"
                android:gravity="center"
                android:shadowColor="@color/default_btn_text_color"
                android:text="@string/time_demo"
                android:textColor="@color/default_btn_text_color"
                android:textSize="24sp"
                app:drawableTint="@color/default_btn_text_color"
                app:layout_constraintEnd_toEndOf="@+id/imageView2"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/previous_step"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/dust_orange"
            android:fontFamily="@font/montserrat"
            android:text="@string/previous_segment"
            android:textColor="@color/default_btn_text_color"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/gray"
            android:fontFamily="@font/montserrat"
            android:text="@string/cancel"
            android:textColor="@color/default_btn_color"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
            app:layout_constraintStart_toStartOf="@+id/constraintLayout"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/next_step"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/dust_orange"
            android:fontFamily="@font/montserrat"
            android:text="@string/next_segment"
            android:textColor="@color/default_btn_text_color"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/previous_step"
            app:layout_constraintStart_toStartOf="@+id/previous_step"
            app:layout_constraintTop_toBottomOf="@+id/previous_step" />

        <Button
            android:id="@+id/start_stop_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/dust_green"
            android:fontFamily="@font/montserrat"
            android:text="@string/start_trip"
            android:textColor="@color/default_btn_text_color"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/previous_step"
            app:layout_constraintStart_toStartOf="@+id/previous_step" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>